fixed font of form and overflow of technology img

--- a/src/styles/design.scss
+++ b/src/styles/design.scss
@@ -1,5 +1,5 @@
 .design {
-  max-width: 1000px;
+  max-width: 1100px;
   display: flex;
 
   &__info {
