--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -13,6 +13,7 @@
 
     &::placeholder {
       color: $color-gray;
+      font-family: $main-font;
     }
 
     &:focus {
@@ -37,6 +38,7 @@
 
     &::placeholder {
       color: $color-gray;
+      font-family: $main-font;
     }
 
     &:focus {
