--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -12,6 +12,7 @@
   }
 
   &__design {
+    margin: 0 auto;
     padding-top: 150px;
   }
 
