--- a/src/styles/technology.scss
+++ b/src/styles/technology.scss
@@ -1,10 +1,9 @@
 .technology {
   max-width: 1200px;
-  overflow: hidden;
 
   &__heading {
     margin-top: 150px;
-    margin-left: 100px;
+    margin-left: 50px;
   }
 
   &__features {
@@ -147,6 +146,9 @@
 
 @media (max-width: $tablet-screen) {
   .technology {
+    overflow-x: scroll;
+    overflow-y: hidden;
+
     &__heading {
       margin-top: 130px;
     }
@@ -155,15 +157,6 @@
 
 @media (max-width: $phone-screen) {
   .technology {
-    &__features {
-      max-width: 624px;
-      height: 277px;
-    }
-
-    &__img {
-      max-width: 624px;
-    }
-
     &__heading {
       margin-top: 0;
       margin-left: 30px;
