--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -17,6 +17,7 @@ $main-bg-color: $color-white;
 $video-button-color: $color-milk;
 
 $titles-font: "DINPro", sans-serif;
+$main-font: "Helvetica Neue", sans-serif;
 
 @mixin main-font {
   font-family: "Helvetica Neue", sans-serif;
